# cosmobot

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
data-scraping/: main.js  main.ts  package-lock.json  package.json  scrapr.py  tsconfig.json  types.d.ts
snap-data/: .gitkeep
src/: aws_helpers.rs  cards.rs  helpers.rs  main.rs  search_for.rs
src/cards/: card_types.rs
src/commands/: fetch.rs  search.rs
