[package]
name = "cosmo-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
aws-sdk-secretsmanager = "1.11.0"
fuzzy-matcher = "*"
itertools = "0.12.0"
lazy_static = "1.4.0"
poise = "0.5.7"
regex = "1.10.2"
serde = "1.0.194"
serde_json = "1.0.110"
serenity = "0.12.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "full"] }
