[package]
name = "cosmobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
aws-sdk-secretsmanager = "1.11.0"
dotenv = "0.15.0"
fuzzy-matcher = "*"
itertools = "0.12.0"
lazy_static = "1.4.0"
poise = "0.5.7"
regex = "1.10.2"
reqwest = "0.11.23"
serde = "1.0.194"
serde_json = "1.0.110"
serenity = "0.12.0"
shuttle-axum = "0.36.0"
shuttle-runtime = "0.36.0"
shuttle-secrets = "0.36.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "full"] }
